[package]
name = "bass_mix"
version = "0.1.0"
edition = "2021"
authors = ["Dmitriy <x-dv7@yandex.ru>"]
description = "BASSmix bindings for Rust"
repository = "https://github.com/x-dv7/bass_mix"
# readme = "../README.md"
keywords = ["BASSmix", "bindings", "audio"]
license = "MIT"
categories = ["external-ffi-bindings", "multimedia::audio"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bass-sys = "2.0.1"
libloading = "0.7.0"
once_cell = "1.8.0"